--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "mariadb": "^3.0.1",
+    "moment-timezone": "^0.5.38",
     "telegraf": "^4.9.2"
   },
   "description": "",
