--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 TZ="Europe/Moscow"
-KEY = "5489794456:AAF89kL1SsQVK2-axyWO8VdARI8rlfAVxdM" 
+KEY = "5489794456:AAF89kL1SsQVK2-axyWO8VdARI8rlfAVxdM"
+PRIM = "Тестовый сервер" 
