--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "mariadb": "^3.0.1",
     "moment-timezone": "^0.5.38",
+    "node-cron": "^3.0.2",
     "telegraf": "^4.9.2"
   },
   "description": "",
