--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
     "dotenv": "^16.0.3",
     "mariadb": "^3.0.1",
     "moment-timezone": "^0.5.38",
