--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /.env
 .env
 /env
+tmpFiles/189167804_События.csv
+tmpFiles/965530024_А тут заметки.csv
+tmpFiles/965530024_Тут расписание.csv
+tmpFiles/1691236176_Антропометрия Игорь.csv
+tmpFiles/1691236176_Антропометрия.csv
