--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ tmpFiles/965530024_А тут заметки.csv
 tmpFiles/965530024_Тут расписание.csv
 tmpFiles/1691236176_Антропометрия Игорь.csv
 tmpFiles/1691236176_Антропометрия.csv
+tmpFiles/
